@@ -69,6 +69,19 @@ DEBUG = 0
 [ProcessMonitor]
 init = "^/sbin/init"
 
+# The [LoadMonitor] section defines the load threshold.  When the system load
+# according to /proc/loadavg is above this value, then system will be deemed
+# 'active' and will not powernap.  If the system is already powernapping, then
+# the system will awake out of the powernap mode if the load raises above the
+# threshold.
+# The default threshold is equal to the number of online processors, as
+# determined by getconf _NPROCESSORS_ONLN
+# Example:
+#   threshold = 1.5
+#   threshold = 9999
+#   threshold = 0
+[LoadMonitor]
+
 # The [TCPMonitor] section lists all the TCP ports on which to watch for
 # established connections using netstat(8).
 # There is no default TCP Monitor.
